# obs-dndbeyond-automation

./: .env.example  .gitignore  CONFIGURATION_SYSTEM.md  Cargo.toml  EXECUTION_SUMMARY.txt  PLAN.md  README.md  RELEASE_INSTRUCTIONS.md  api-response.json  config.example.json  config.rules.example.json  package-lock.json  package.json  tsconfig.json
rust-src/: main.rs  types.rs
rust-src/config/: loader.rs  mod.rs  types.rs
rust-src/dnd_beyond/: client.rs  hp_calculator.rs  mod.rs
rust-src/game_log/: client.rs  formatter.rs  mod.rs  types.rs
rust-src/obs/: client.rs
rust-src/rules/: engine.rs  executor.rs  types.rs
rust-src/stats/: calculator.rs  definitions.rs  mod.rs  types.rs
rust-src/web/: server.rs
scripts/: build-exe.js
src/: config.ts  index.ts  types.ts
src/__fixtures__/: character-data.ts
src/config/: index.ts  loader.test.ts  loader.ts  setup.ts  types.ts
src/dnd-beyond/: client.ts  hp-calculator.test.ts  hp-calculator.ts
src/game-log/: client.ts  formatter.ts  index.ts  types.ts
src/obs/: client.ts
src/rules/: engine.test.ts  engine.ts  executor.test.ts  executor.ts  index.ts  types.ts
src/stats/: calculator.test.ts  calculator.ts  definitions.test.ts  definitions.ts  index.ts  types.ts
src/web/: index.ts  server.ts
web-ui/: app.js  index.html  styles.css
