[package]
name = "obs-dndbeyond-automation"
version = "1.0.0"
edition = "2021"
description = "Automatically sync OBS with D&D Beyond character data in real-time"
license = "MIT"

[[bin]]
name = "obs-dndbeyond-automation"
path = "rust-src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "cookies"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
obws = "0.14"
axum = { version = "0.8", features = ["tokio"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }
tokio-stream = { version = "0.1", features = ["sync"] }
anyhow = "1"
regex = "1"
urlencoding = "2"

[profile.release]
opt-level = 3
lto = "thin"
